scripts/nullaway/annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8.txt
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Socket.java:168: error: [NullAway] dereferenced expression args is @Nullable
                List<Object> _args = new ArrayList<Object>(args.length + 1);
                                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Socket.java:299: error: [NullAway] passing @Nullable parameter 'packet.data' where @NonNull is required
        List<Object> args = new ArrayList<Object>(Arrays.asList(toArray(packet.data)));
                                                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Socket.java:341: error: [NullAway] passing @Nullable parameter 'packet.data' where @NonNull is required
        fn.call(toArray(packet.data));
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Socket.java:373: error: [NullAway] enhanced-for expression this.subs is @Nullable
        for (On.Handle sub : this.subs) {
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/emitter/Emitter.java:120: error: [NullAway] passing @Nullable parameter 'args' where @NonNull is required
                fn.call(args);
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Manager.java:114: error: [NullAway] initializer method does not guarantee @NonNull field engine (line 89) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Manager(@Nullable URI uri, @Nullable Options opts) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:166: error: [NullAway] initializer method does not guarantee @NonNull fields upgrades (line 117), transport (line 121) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Socket(@Nullable Options opts) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:167: error: [NullAway] dereferenced expression opts is @Nullable
        if (opts.host != null) {
                ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:402: error: [NullAway] dereferenced expression to.name is @Nullable
                if (transport[0] != null && !to.name.equals(transport[0].name)) {
                                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:447: error: [NullAway] dereferenced expression packet is @Nullable
            logger.fine(String.format("socket received: type '%s', data '%s'", packet.type, packet.data));
                                                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:476: error: [NullAway] dereferenced expression this.transport.query is @Nullable
        this.transport.query.put("sid", data.sid);
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Parser.java:94: error: [NullAway] dereferenced expression obj is @Nullable
            str.append(obj.type);
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Parser.java:267: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.reconPack = null;
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/parser/Packet.java:21: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(type, null);
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/parser/Parser.java:65: error: [NullAway] dereferenced expression packets.get(packet.type) is @Nullable
        resultArray[0] = packets.get(packet.type).byteValue();
                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/parser/Parser.java:172: error: [NullAway] dereferenced expression err.type is @Nullable
                    if (err.type.equals(packet.type) && err.data.equals(packet.data)) {
                                ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/transports/PollingXHR.java:198: error: [NullAway] dereferenced expression xhr is @Nullable
                            xhr.setFixedLengthStreamingMode(self.data.length);
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/transports/PollingXHR.java:205: error: [NullAway] dereferenced expression xhr is @Nullable
                        for (String key : xhr.getHeaderFields().keySet()) {
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/transports/WebSocket.java:27: error: [NullAway] initializer method does not guarantee @NonNull field ws (line 24) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public WebSocket(Options opts) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Binary.java:22: error: [NullAway] passing @Nullable parameter 'packet.data' where @NonNull is required
        packet.data = _deconstructPacket(packet.data, buffers);
                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Binary.java:74: error: [NullAway] passing @Nullable parameter 'packet.data' where @NonNull is required
        packet.data = _reconstructPacket(packet.data, buffers);
                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Binary.java:87: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                    return null;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Binary.java:95: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return num >= 0 && num < buffers.length ? buffers[num] : null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Binary.java:103: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                    return null;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/utf8/UTF8.java:14: error: [NullAway] @NonNull static field byteArray not initialized
    private static int[] byteArray;
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
25 errors
